tools/crates/vendor/toml_edit/tests/fixtures/invalid/key/special-character.stderr
TOML parse error at line 1, column 1
  |
1 | μ = "greek small letter mu"
  | ^^
invalid key
